--- a/index.html
+++ b/index.html
@@ -23,10 +23,22 @@
             <h2>Welcome to Our Store</h2>
             <p>Find quality products in IT, pets, health, beauty, and more.</p>
         </section>
-        <section id="products">
-            <h2>Our Products</h2>
-            <!-- Add product details here -->
+
+        <!-- Featured Products Section -->
+        <section id="featured-products">
+            <h2>Featured Products</h2>
+            <div class="product-category">
+                <h3>IT Supplies</h3>
+                <div class="product-card">
+                    <img src="it_supplies.png" alt="IT Supplies">
+                    <h4>Modern Laptop</h4>
+                    <p>The perfect laptop for all your needs, with top-notch performance and sleek design.</p>
+                </div>
+                <!-- Repeat for other IT products -->
+            </div>
+            <!-- Repeat for other categories with respective images and descriptions -->
         </section>
+
         <section id="about">
             <h2>About Us</h2>
             <p>Learn more about our mission and values.</p>
@@ -39,6 +51,6 @@
     <footer>
         <p>&copy; 2024 Universal Market Hub. All rights reserved.</p>
     </footer>
-    <script src="main.js"></script>
 </body>
 </html>
+
